# google_adk_agent_manager

./: LICENSE  README.md  pyproject.toml  requirements.txt
adk_short_bot/: agent.py  prompt.py
adk_short_bot/tools/: __init__.py  json_formattter.py
deployment/: remote.py
